# efie-2d

./: .gitignore  CMakeLists.txt  README.md  efie2d_main.cpp
data/CircleTest1/: circle_test1.json
data/PetersonCylinder/: PetersonCyl.json  PetersonCyl_Y0.output  comparePetersonResults.m  run_petersoncyl.bat
data/ThreeObjects/: ThreeObjects.json
src/: doxyfile
src/excitation/: excitation.cpp  excitation.h  incident_field_utils.h  planewave.cpp  planewave.h  point_source.cpp  point_source.h
src/geometry/: geometry.cpp  geometry.h
src/json_reader/: json_reader.cpp  json_reader.h
src/kernel/: ai_ker.cpp  ai_ker.h  kernel.cpp  kernel.h
src/material/: dielectric_parameters.cpp  dielectric_parameters.h  material.cpp  material.h
src/mesh/: mesh.cpp  mesh.h
src/model/: frequency.cpp  frequency.h  model.cpp  model.h
src/object/: point2d.h  primitive_object.cpp  primitive_object.h  shape.h
src/request/: plotOnMesh.m  postprocessing_fun.h  writing_utils.h
src/solver/: solver.cpp  solver.h
src/utils/: efie2d_types.h  efie2d_version.h  efie2d_version.h.in  hr_time.cpp  hr_time.h  physical_constants.h  stubs.h
test/: CMakeLists.txt  PetersonCyl.json  test.cpp  test_assemble_mat.h  test_excitation.h  test_geometry.h  test_includes.h  test_json_reader.h  test_material.h  test_mesh.h  test_primitive_object.h  test_solver.h
